--- a/index.html
+++ b/index.html
@@ -2,9 +2,106 @@
 <html>
    <head>
       <title>COGSCI 2023 MEETUPS Shanghai</title>
+      <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body, html {
+  height: 100%;
+  color: #777;
+  line-height: 1.8;
+}
+
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* First image (Logo. Full height) */
+.bgimg-1 {
+  background-image: url('logo/cogsci.png');
+  min-height: 100%;
+}
+
+/* Second image (Portfolio) */
+.bgimg-2 {
+  background-image: url("/w3images/parallax2.jpg");
+  min-height: 400px;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+  background-image: url("/w3images/parallax3.jpg");
+  min-height: 400px;
+}
+
+.w3-wide {letter-spacing: 10px;}
+.w3-hover-opacity {cursor: pointer;}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1600px) {
+  .bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: scroll;
+    min-height: 400px;
+  }
+}
+</style>
    </head>
+
    <body>
-      <h1>COGSCI 2023 MEETUPS @ Shanghai! ⭐️</h1>
-      <p>How was your day? 🎉</p>
+      <img src="/logo/cogsci.png" width="142" height="142">
+      <h1>COGSCI 2023 MEETUPS Shanghai: Computational Cognitive Neuroscience and Computational Psychiatry</h1>
+      <h1>国际认知科学学会上海见面会暨计算认知神经与计算精神病学研讨会</h1>
+      <h2>现已开放注册 JOIN US IN Shanghai 🎉🎉🎉</h2>
+      <h1>会议时间⏰：2023年8月12-13日（周六、周日）</h1>
+      <h1>会议地点🗺️：上海崇明岛</h1>
+      <h1>会议形式和内容🖥️：</h1>
+      <h2>报告</h2>
+      <p>会议正式环节包括6个15分钟报告，9个10分钟报告。15个会议报告人，将通过提交申请、组委会审核选拔得出。评委通过对报告打分，评选出三位最佳报告人（详见：最佳报告人评选）。</p>
+      <h2>夜话</h2>
+      <p>夜话作为非正式环节，将探讨学术生活中的一些有趣议题，包括但不限于：个人成长、与导师相处、实验室管理、找工作等。</p>
+      <h2>活动</h2>
+      <p>包括但不限于：赢东村游玩/有机农场参观水果采摘/环岛骑行/室内游戏。</p>
+      <h2>圆桌</h2>
+      <p>10余位来自港大、北大、北师大、上海交大、浙大、华东师大、上科大、苏州大学、南京师大、上海精卫、北京儿童医院等多所高校和研究机构的教授和PI将受邀参与圆桌，讨论计算精神病学发展过程中的重要问题。</p>
+      <h1>招募报告人</h1>
+      <p>欢迎相关领域（认知科学、心理学、脑科学、计算神经科学、计算精神病学、人工智能、脑机接口等）的本科生、硕士生、博士生、博士后报名参加!</p>
+      <h2>报名链接：</h2>
+      <p> <url url=https://airtable.com/shroyuEOoFokAMsRe></url> </p>
+      <h2>报名材料：</h2>
+      <p>●	个人简历</p>
+      <p>●	兴趣陈述（描述参与会议的动机，500字左右）</p>
+      <p>●	长摘要（详细描述研究背景、方法、结果、讨论等，包括重要图表，1000字左右，英文撰写）</p>
+      <p>会议组委会将会在6月29号到7月12号间对材料进行评审，从主题契合度、研究角度新颖性、研究成熟度、领域贡献度等维度进行打分。共评选出15个报告，前6名，每人进行15分钟报告，7-15名，每人进行10分钟报告。组委会将在7月12号公布 入选结果并组建会议交流群。</p> 
+      <h2>最佳报告人评选</h2>
+      <p>参会专家，对15个口头报告进行打分，对每个报告提供2点反馈意见。综合得分最高的前三名，颁发金银铜牌奖杯和奖金。</p>
+      <p>●	金奖 1000人民币 </p>
+      <p>●	银奖 600 人民币 </p>
+      <p>●	铜奖 300 人民币 </p>
+      <h2>关于差旅费</h2>
+      <p>会议组委会将全额报销15位入选报告人的住宿费用，车票机票等交通费最高报销额度为500元人民币，未超过500元，按照实际车票价格进行报销。</p>
+      <h2>关于线上参加报告</h2>
+      <p>本会议欢迎海内外研究者进行报名，我们根据提交材料的得分决定是否入选最终报告。入选报告人可以线上参会，线上完整收听其他报告人的报告。江浙沪地区报告人推荐线下现场报告。</p>
+      <h2>组委会成员</h2>
+      <p>胡传鹏博士 南京师范大学心理学院</p>
+      <p>陈骥博士 浙江大学心理与行为科学系</p>
+      <p>耿海洋博士 天桥脑科学研究院</p>
+      <p>王庆博士 上海市精神卫生中心</p>
+      <h2>主办单位</h2>
+      <p>认知科学学会 (Cognitive Science Society) 是认知科学领域的国际权威协会。该协会汇集了来自世界各地的研究者，他们拥有一个共同的目标：理解人类心智的本质。该学会的使命是促进认知科学作为一门学科的发展，并促进各领域研究人员之间的科学交流，包括人工智能、语言学、人类学、心理学、神经科学、哲学和教育等领域。该学会是一家非营利性的专业组织，其活动包括赞助年度会议和出版认知科学和TopiCS杂志。详情参见：https://cognitivesciencesociety.org/</p>
+      <p>开放科学中文社区（Chinese Open Science Network，简称COSN）是众多国际开放学术社区网络（Community of Open Scholarship Networks）之一, COSN旨在传播和推广开放科学和可重复性的理念与实践。以促进全球开放科学文化。COSN由早期职业研究人员（Early Career Researchers，简称ECRs）运营，为ECR提供开放的学习与交流的平台。目前COSN组织了包括OpenTalks、OpenTutorials、OpenMinds和OpenTransfer等一系列的常规学术活动。更多关于COSN的介绍，请参考我们的学术论文：https://journals.sagepub.com/doi/full/10.1177/25152459221144986
+    </p>
+      <p>华人计算精神病学联盟 (Chinese Computational Psychiatry Network, CCPN)，创建于2021年，致力于推动中国计算精神病学发展。我们希望培养一批年轻研究者进入Computational Psychiatry (CP)领域。我们努力建立华人计算精神病学研究者社区，促进华人CP研究者与国际CP研究者的沟通、交流与合作。现有一个360余人VIP成员，成员为聚焦人工智能、计算神经和精神健康领域的高校研究者（博士、博后、教授）和临床医生、业界公司的创始人。基于以上的初衷，我们已经成功举办了第一届华人计算精神病学工作坊。我们也在举办每周一次的CP文献报告讨论会（完成42期），每月一次的CP seminar（完成11期），不定期的CP读书会（完成4季）, 每年一次的CP hack（完成1季），以及每年一次的CP国际会议。详情参见：https://www.nature.com/articles/s41562-022-01328-4
+    </p>
+      <img src="/logo/ccpn_cosn_cogsci.png" width="526" height="142">
+      <h2>会议咨询</h2>
+      <p>opensci@outlook.com</p>
    </body>
+
 </html>
