--- a/index.html
+++ b/index.html
@@ -14,48 +14,11 @@ body, html {
   color: #777;
   line-height: 1.8;
 }
-
-/* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* First image (Logo. Full height) */
-.bgimg-1 {
-  background-image: url('logo/cogsci.png');
-  min-height: 100%;
-}
-
-/* Second image (Portfolio) */
-.bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
-  min-height: 400px;
-}
-
-/* Third image (Contact) */
-.bgimg-3 {
-  background-image: url("/w3images/parallax3.jpg");
-  min-height: 400px;
-}
-
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
 </style>
    </head>
-
    <body>
-      <img src="/logo/cogsci.png" width="142" height="142">
+      <img src="https://github.com/OpenSci-CN/cogscimeetup2023/blob/main/logo/title_fig.jpg?raw=true" height="150" width="150"
+      />
       <h1>COGSCI 2023 MEETUPS Shanghai: Computational Cognitive Neuroscience and Computational Psychiatry</h1>
       <h1>国际认知科学学会上海见面会暨计算认知神经与计算精神病学研讨会</h1>
       <h2>现已开放注册 JOIN US IN Shanghai 🎉🎉🎉</h2>
@@ -99,7 +62,7 @@ body, html {
     </p>
       <p>华人计算精神病学联盟 (Chinese Computational Psychiatry Network, CCPN)，创建于2021年，致力于推动中国计算精神病学发展。我们希望培养一批年轻研究者进入Computational Psychiatry (CP)领域。我们努力建立华人计算精神病学研究者社区，促进华人CP研究者与国际CP研究者的沟通、交流与合作。现有一个360余人VIP成员，成员为聚焦人工智能、计算神经和精神健康领域的高校研究者（博士、博后、教授）和临床医生、业界公司的创始人。基于以上的初衷，我们已经成功举办了第一届华人计算精神病学工作坊。我们也在举办每周一次的CP文献报告讨论会（完成42期），每月一次的CP seminar（完成11期），不定期的CP读书会（完成4季）, 每年一次的CP hack（完成1季），以及每年一次的CP国际会议。详情参见：https://www.nature.com/articles/s41562-022-01328-4
     </p>
-      <img src="/logo/ccpn_cosn_cogsci.png" width="526" height="142">
+      <img src="https://github.com/OpenSci-CN/cogscimeetup2023/blob/main/logo/ccpn_cosn_cogsci.png?raw=true" width="450" height="142">
       <h2>会议咨询</h2>
       <p>opensci@outlook.com</p>
    </body>
