--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ body, html {
 </style>
    </head>
    <body>
-      <img src="https://github.com/OpenSci-CN/cogscimeetup2023/blob/main/logo/title_fig.jpg?raw=true" height="150" width="150"
-      />
+      <img src="https://github.com/OpenSci-CN/cogscimeetup2023/blob/main/logo/title_fig.jpg?raw=true"/>
       <h1>COGSCI 2023 MEETUPS Shanghai: Computational Cognitive Neuroscience and Computational Psychiatry</h1>
       <h1>国际认知科学学会上海见面会暨计算认知神经与计算精神病学研讨会</h1>
       <h2>现已开放注册 JOIN US IN Shanghai 🎉🎉🎉</h2>
